<resources>
    <string name="app_name">Adoptame</string>

    <string name="sign_in_title">Iniciar sesión</string>
    <string name="sign_in_email_label">Correo electrónico</string>
    <string name="sign_in_password_label">Contraseña</string>
    <string name="sign_in_login_btn">Ingresar</string>
    <string name="sign_in_login_with_google_btn">Ingresar con Google</string>
    <string name="sign_in_is_new_user">¿Eres nuevo por aquí?</string>
    <string name="sign_in_create_account">Crear cuenta</string>

    <string name="sign_up_title">Crear cuenta</string>
    <string name="sign_up_firstname_label">Nombre</string>
    <string name="sign_up_lastname_label">Apellido</string>
    <string name="sign_up_email_label">Correo electrónico</string>
    <string name="sign_up_password_label">Contraseña</string>
    <string name="sign_up_confirm_password_label">Confirmar contraseña</string>
    <string name="sign_up_phone_number_label">Número de celular</string>
    <string name="sign_up_join_btn">Unirse</string>
    <string name="sign_up_is_not_new_user">¿Ya tienes una cuenta?</string>
    <string name="sign_up_login_here">Ingresa aquí</string>

    <string name="main_user_full_name_default">Username</string>
    <string name="main_user_email_default">user@example.com</string>
    <string name="main_welcome_user_default">Bienvenido, Username!</string>
    <string name="main_welcome_user">Bienvenido, %1$s!</string>
    <string name="main_welcome_description">¿Estás listo para encontrar un nuevo amigo?</string>
    <string name="main_search_pets_label">Buscar mascotas</string>
    <string name="main_pet_dogs">Perros</string>
    <string name="main_pet_cats">Gatos</string>
    <string name="main_pet_rabbits">Conejos</string>
    <string name="main_pet_hamsters">Cuyos</string>
    <string name="main_pet_birds">Aves</string>
    <string name="main_section_recent">Reciente</string>
    <string name="main_see_all">Ver todo</string>

    <string name="menu_item_home">Inicio</string>
    <string name="menu_item_my_posts">Mis publicaciones</string>
    <string name="menu_item_logout">Cerrar sesión</string>
    <string name="menu_item_love">Me encanta</string>

    <string name="card_post_pet_name_default">Lucas</string>
    <string name="card_post_pet_sex_default">Male</string>
    <string name="card_post_pet_stage_default">Adult</string>
    <string name="card_post_pet_story_default">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet aut cupiditate eum incidunt magnam magni necessitatibus odio odit placeat porro, provident quasi qui quos recusandae, reprehenderit repudiandae, voluptate. Animi consectetur eligendi eum excepturi nulla omnis placeat praesentium. Ad atque beatae eligendi mollitia nihil porro recusandae rem sapiente similique sit.</string>
    <string name="card_post_details_btn">Detalles</string>

    <string name="create_post_title">Crear publicación</string>
    <string name="create_post_pet_section">Mascota</string>
    <string name="create_post_location_section">Ubicación</string>
    <string name="create_post_select_picture_btn">Seleccionar una foto</string>
    <string name="create_post_pet_name_label">Nombre</string>
    <string name="create_post_pet_story_label">Historia</string>
    <string name="create_post_pet_animal_label">Categoria</string>
    <string name="create_post_pet_weight_label">Peso</string>
    <string name="create_post_pet_sex_label">Sexo</string>
    <string name="create_post_pet_stage_label">Etapa</string>
    <string name="create_post_city_label">Ciudad</string>
    <string name="create_post_state_label">Región</string>
    <string name="create_post_pet_age_label">Edad</string>
    <string name="create_post_main_btn">Publicar</string>

    <string name="search_result_title_default">Resultados</string>
    <string name="search_result_title_dogs">Perros</string>
    <string name="search_result_title_cats">Gatos</string>
    <string name="search_result_title_rabbits">Conejos</string>
    <string name="search_result_title_hamsters">Cuyos</string>
    <string name="search_result_title_birds">Aves</string>
    <string name="search_result_title_my_posts">Mis publicaciones</string>
    <string name="search_result_no_result_found_title">No se encontraron resultados</string>
    <string name="search_result_no_result_found_body">Intenta usar otras palabras claves o quitar los filtros de búsqueda</string>

    <string name="post_details_title">Detalles</string>
    <string name="post_details_pet_age_section">Edad</string>
    <string name="post_details_pet_sex_section">Sexo</string>
    <string name="post_details_pet_weight_section">Peso</string>
    <string name="post_details_pet_owner_section">Dueño</string>
    <string name="post_details_pet_story_section">Historia de la mascota</string>
    <string name="post_details_pet_name_default">Marley Taylor</string>
    <string name="post_details_location_default">Toronto, Ontario</string>
    <string name="post_details_location">%1$s, %2$s</string>
    <string name="post_details_pet_age_default">3 años</string>
    <string name="post_details_pet_age">%1$d años</string>
    <string name="post_details_pet_sex_default">Masculino</string>
    <string name="post_details_pet_weight_default">18 kg</string>
    <string name="post_details_pet_weight">%1$s kg</string>
    <string name="post_details_pet_story_default">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur cumque, earum excepturi expedita, illum ipsa ipsam itaque iusto molestiae molestias mollitia neque nisi placeat quos rem repellendus sed sit suscipit veniam.</string>
    <string name="post_details_user_full_name_default">Katie Burgess</string>
    <string name="post_details_contact_me_btn">Contáctame</string>

    <string name="error_required_field">Campo requerido</string>
    <string name="error_min_chars">Carácteres minimos %1$d</string>
    <string name="error_max_chars">Carácteres máximos %1$d</string>
    <string name="error_invalid_email">Correo electrónico no valido</string>
    <string name="error_invalid_password">Contraseña no valida, al menos una letra y un dígito (%1$d - %2$d)</string>
    <string name="error_invalid_confirm_password">Las contraseñas no coinciden</string>
    <string name="error_invalid_phone_number">Télefono no valido (%1$d dígitos)</string>

    <string name="users_reference">users</string>
    <string name="posts_reference">posts</string>
    <string name="users_posts_reference">users_posts</string>
    <string name="posts_storage_reference">posts/</string>

    <string-array name="pet_animals">
        <item>Perro</item>
        <item>Gato</item>
        <item>Conejo</item>
        <item>Hamster</item>
        <item>Ave</item>
    </string-array>

    <string-array name="pet_sexs">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="pet_stages">
        <item>Cachorro</item>
        <item>Adulto</item>
    </string-array>

    <string name="web_client_id">426399822758-6scp3tafb7te3hlgrhu41n1fq8n2453q.apps.googleusercontent.com</string>
</resources>