<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PostDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pet_image_view"
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_posts_details_body"
                android:orientation="vertical"
                android:padding="@dimen/post_details_spacing"
                android:translationY="-16dp">

                <TextView
                    android:id="@+id/pet_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:lines="1"
                    android:text="@string/post_details_pet_name_default"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="?attr/colorOnSurface" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="2sp"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/location_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_details_location_default"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:divider="@drawable/divider_16"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_bordered_rounded"
                        android:orientation="vertical"
                        android:paddingVertical="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/post_details_pet_age_section"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                        <TextView
                            android:id="@+id/pet_age_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/post_details_pet_age_default"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_bordered_rounded"
                        android:orientation="vertical"
                        android:paddingVertical="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/post_details_pet_sex_section"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                        <TextView
                            android:id="@+id/pet_sex_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/post_details_pet_sex_default"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_bordered_rounded"
                        android:orientation="vertical"
                        android:paddingVertical="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/post_details_pet_weight_section"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                        <TextView
                            android:id="@+id/pet_weight_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/post_details_pet_weight_default"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/post_details_pet_story_section"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                    <TextView
                        android:id="@+id/pet_story_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lineHeight="24dp"
                        android:lines="4"
                        android:text="@string/post_details_pet_story_default"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/post_details_spacing"
            android:paddingVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/owner_full_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/post_details_user_full_name_default"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_details_pet_owner_section" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/contact_me_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_details_contact_me_btn"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_phone_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:menu="@menu/menu_post_details"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
    </com.google.android.material.appbar.AppBarLayout>
</FrameLayout>